<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.user.ChangePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout style="@style/AppTheme.Item">

            <TextView
                style="@style/AppTheme.TextView.ItemTitle"
                android:ems="3"
                android:text="@string/phone_no" />

            <EditText
                android:id="@+id/edtPhoneNo"
                style="@style/AppTheme.EditText.PhoneNo"
                android:hint="@string/phone_no_hint" />
        </LinearLayout>

        <View style="@style/AppTheme.Item.SplitLine" />

        <LinearLayout style="@style/AppTheme.Item">

            <TextView
                android:id="@+id/txvPasswordTitle"
                style="@style/AppTheme.TextView.ItemTitle"
                android:ems="3"
                android:text="@string/password" />

            <EditText
                android:id="@+id/edtPassword"
                style="@style/AppTheme.EditText"
                android:hint="@string/password_hint" />
        </LinearLayout>

        <View style="@style/AppTheme.Item.SplitLine" />

        <LinearLayout style="@style/AppTheme.Item">

            <TextView
                style="@style/AppTheme.TextView.ItemTitle"
                android:ems="3"
                android:text="@string/security_code" />

            <EditText
                android:id="@+id/edtSecurityCode"
                style="@style/AppTheme.EditText.SecurityCode"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/security_code_hint" />

            <Button
                android:id="@+id/btnGetSecurityCode"
                style="@style/AppTheme.Button"
                android:layout_marginLeft="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:text="@string/account_get_security_code" />
        </LinearLayout>

        <TextView
            android:id="@+id/txvSendTip"
            style="@style/AppTheme.TextView.Note"
            android:layout_gravity="right"
            android:text="@string/account_security_code_send"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnOk"
            style="@style/AppTheme.Button.Submit"
            android:text="@string/submit" />

        <LinearLayout
            android:id="@+id/layoutAgreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <CheckBox
                android:id="@+id/chkAgreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:text="@string/account_accept_user_agreement"
                android:textColor="@color/colorNoteText" />

            <TextView
                android:id="@+id/txvAgreement"
                style="@style/AppTheme.TextView.Note"
                android:text="@string/account_user_agreement"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>
