<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.maxcloud.renter.activity.setting.CustomerServiceActivity">

    <View
        style="@style/AppTheme.Item.SplitLine"
        android:layout_marginTop="10dp" />

    <LinearLayout
        style="@style/AppTheme.Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/customer_service_phone_no" />

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/feedback_phone_no"
            android:textColor="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnCall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_call" />
    </LinearLayout>

    <View style="@style/AppTheme.Item.SplitLine" />

    <LinearLayout
        style="@style/AppTheme.Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/customer_service_qq" />

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/feedback_qq1"
            android:textColor="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnQQ1"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_qq" />
    </LinearLayout>

    <View style="@style/AppTheme.Item.SplitLine" />

    <LinearLayout
        style="@style/AppTheme.Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/customer_service_qq" />

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/feedback_qq2"
            android:textColor="@color/black" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:id="@+id/btnQQ2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@mipmap/ic_qq" />
    </LinearLayout>

    <View style="@style/AppTheme.Item.SplitLine" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/layoutContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>
</LinearLayout>
