<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.maxcloud.renter.activity.setting.AboutActivity">

    <LinearLayout
        style="@style/AppTheme.Item"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingTop="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_down_url" />

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/about_scan_download" />
    </LinearLayout>

    <View
        style="@style/AppTheme.Item.SplitLine"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/btnCheckUpdate"
            style="@style/AppTheme.Item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">

            <TextView
                style="@style/AppTheme.TextView.ItemTitle"
                android:text="@string/setting_check_update" />

            <View
                android:id="@+id/tipDotCheckUpdate"
                style="@style/AppTheme.Tip.RedDot"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="130dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txvVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center_vertical"
                android:layout_marginRight="20dp"
                android:textColor="@color/gray"
                android:textSize="16sp" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/prbUpdate"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_alignParentBottom="true"
            android:max="100"
            android:progress="0"
            android:visibility="gone" />
    </RelativeLayout>

    <View style="@style/AppTheme.Item.SplitLine" />

    <FrameLayout
        android:id="@+id/btnFeedback"
        style="@style/AppTheme.Item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/setting_feedback_title" />

        <ImageView style="@style/AppTheme.Item.GoImage" />
    </FrameLayout>

    <View style="@style/AppTheme.Item.SplitLine" />

    <FrameLayout
        android:id="@+id/btnContactCustomerService"
        style="@style/AppTheme.Item">

        <TextView
            style="@style/AppTheme.TextView.ItemTitle"
            android:text="@string/about_contact_customer_service" />

        <ImageView style="@style/AppTheme.Item.GoImage" />
    </FrameLayout>

    <View style="@style/AppTheme.Item.SplitLine" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/btnAgreement"
        style="@style/AppTheme.TextView.ItemTitle"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        android:text="@string/about_preview_user_agreement"
        android:textColor="@color/colorPrimary" />

</LinearLayout>
